# oomx-runtime

./: CMakeLists.txt  README.md
cmake/: llvm.cmake
gpu/: CMakeLists.txt  oomx_cuda.cu
include/oomx/: Runtime.h  Schema.h  Sow.h  Store.h  gpu.h
mlir/dialects/: MatrixSoA.td
mlir/lib/MatrixSoA/: MatrixSoADialect.cpp
mlir/lib/OOMem/: OOMemDialect.cpp  OOMemOps.cpp
passes/: OOMatrixPass.cpp
runtime/: CMakeLists.txt  Runtime.cpp  Schema.cpp  Sow.cpp  Store.cpp
tools/oomx-bench/: CMakeLists.txt  cuda_main.cu  main.cpp
